--- a/happy_halloween/src/pages/Home/Home.css
+++ b/happy_halloween/src/pages/Home/Home.css
@@ -1,29 +1,27 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: black;
+    /* background-color: black; */
     height: 100vh;
     overflow: hidden;
+    background-color: black;
 }
 
-.title {
-    /* object-fit: cover; */
+/* .title {
     margin: 0;
     padding: 0;
     position: absolute;
-    /* font-weight: lighter; */
-    color: white;
-    /* line-height: 40px; */
+    color: black;
     text-align: center;
     letter-spacing: 5.5rem;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-80%);
     width: 100%;
     font-size: 15em;
     font-family: 'Black Ops One', cursive;
-}
+} */
 
-h1 span {
+/* h1 span {
     display: inline-block;
     animation: animate 1s linear forwards;
 }
@@ -41,7 +39,7 @@ h1 span {
         transform: rotateY(0deg);
         filter: blur(0);
     }
-}
+} */
 
 /* title {
     animation: blink 5.5s linear 20;
@@ -52,9 +50,9 @@ h1 span {
     0%{opacity: 0;}
     50%{opacity: .5;}
     100%{opacity: 1;}
-    } */ */
+    } */ 
 
-h1 span:nth-child(1)
+/* h1 span:nth-child(1)
 {
     animation-delay: 1s;
 }
@@ -77,4 +75,165 @@ h1 span:nth-child(4)
 h1 span:nth-child(5)
 {
     animation-delay: 5s;
+} */
+
+/* .subtitle { */
+    /* margin: 0; */
+    /* padding: 0; */
+    /* position: absolute; */
+    /* color: black; */
+    /* text-align: center; */
+    /* letter-spacing: .5rem; */
+    /* text-transform: uppercase; */
+    /* transform: translateY(-90) ; */
+    /* top: 50%;
+    transform: translateY(30%);
+    text-align: center;
+    font-size: 1em;
+    font-family: 'Black Ops One', cursive; */
+/* } */
+
+.title {
+    /* width: 600px; */
+    /* float: left; */
+    /* margin: 10px; */
+    /* text-align: center; */
+    position: absolute;
+    top: 42%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* display: flex; */
+    font-weight: bold;
+    font-size: 13em;
+    letter-spacing: 1.4rem;
+    /* font-family: 'Black Ops One', cursive; */
+    color: white;
+    /* animation: glow 5s infinite; */
+    animation: text-flicker 4s linear infinite;
+    font-family: 'Raleway', sans-serif;
 }
+
+@keyframes text-flicker {
+    0% {
+      opacity:0.1;
+      text-shadow: 0px 0px 29px red;
+    }
+    
+    10% {
+      opacity:1;
+      text-shadow: 0px 0px 29px red;
+    }
+    20% {
+      opacity:0.1;
+      text-shadow: 0px 0px 29px red;
+    }
+    30% {
+      opacity:1;
+      text-shadow: 0px 0px 29px red;
+    }
+    40% {
+      opacity:0.1;
+      text-shadow: 0px 0px 29px red;
+    }
+    50% {
+        opacity:1;
+        text-shadow: 0px 0px 29px red;
+      }
+    60% {
+        opacity:0.3;
+        text-shadow: 0px 0px 29px red;
+      }
+    70% {
+        opacity:1;
+        text-shadow: 0px 0px 29px red;
+      }
+    80% {
+        opacity:0.7;
+        text-shadow: 0px 0px 29px red;
+      }
+    90% {
+        opacity:0.9;
+        text-shadow: 0px 0px 29px red;
+      }
+    100% {
+        opacity:0.9;
+        text-shadow: 0px 0px 29px red;
+      }
+    
+}
+   
+
+.flicker {
+    animation: letter-flicker 4s linear infinite;
+}
+
+
+  @keyframes letter-flicker {
+    0% {
+      opacity:0.1;
+      text-shadow: 0px 0px 29px red;
+    }
+    10% {
+      opacity:0.1;
+      text-shadow: 0px 0px 29px red;
+    }
+    20% {
+      opacity:1;
+      text-shadow: 0px 0px 29px red;
+    }
+    30% {
+      opacity:1;
+      text-shadow: 0px 0px 29px red;
+    }
+    40% {
+      opacity:0.1;
+      text-shadow: 0px 0px 29px red;
+    }
+    50% {
+      opacity:1;
+      text-shadow: 0px 0px 29px red;
+    }
+    60% {
+      opacity:1;
+      text-shadow: 0px 0px 29px red;
+    }
+    70% {
+      opacity:0.4;
+      text-shadow: 0px 0px 29px red;
+    }
+    80% {
+      opacity:1;
+      text-shadow: 0px 0px 29px red;
+    }
+  }
+
+  .subtitle-container {
+      color: white;
+      position: absolute;
+      top: 58%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      letter-spacing: .7rem;
+      font-size: 1.8rem;
+      overflow: hidden;
+      /* white-space: nowrap; */
+      /* animation-name: type; */
+      /* animation-duration: 8s; */
+      /* animation-delay: 6s; */
+      /* animation-iteration-count: normal; */
+      /* word-spacing: 4px; */
+
+  }
+
+  /* @keyframes type {
+      from {
+          width: 0;
+      }
+      to {
+          width: 50rem;
+      }
+  } */
+
+  .subtitle {
+      word-spacing: 10px;
+  }
