--- a/happy_halloween/src/components/Navbar/Navbar.css
+++ b/happy_halloween/src/components/Navbar/Navbar.css
@@ -1,19 +1,31 @@
+body {
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+}
+
+
 .navbar-container {
-    letter-spacing: .4rem;
-    float: right;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    display: flex;
+    align-items: center;
+    height: 50px;
+    justify-content: space-evenly;
 }
 
 li {
-    float: left;
+    display: flex;
 }
 
-.navbar-links {
+.navbar-link {
     color: white;
     text-decoration: none;
-    display: flex;
-    padding: 40px;
+    letter-spacing: 1.5px;
+    font-size: 13.5px;
     text-transform: uppercase;
 }
+
+.navbar-link:hover {
+    color: red;
+}
+
+
