--- a/happy_halloween/src/index.css
+++ b/happy_halloween/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  /* overflow: hidden; */
+  background-color: black;
 }
 
 code {
