--- a/happy_halloween/src/components/PopUp/PopUp.css
+++ b/happy_halloween/src/components/PopUp/PopUp.css
@@ -8,6 +8,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    /* color: blue; */
     /* visibility: hidden; */
     /* opacity: 0; */
     /* transition: all .3s; */
