--- a/happy_halloween/src/components/Warning/Warning.css
+++ b/happy_halloween/src/components/Warning/Warning.css
@@ -9,13 +9,14 @@
     /* left: 20rem; */
     width: 36rem;
     height: 5rem;
-    /* border: 2px solid yellow; */
+    border: 2px solid yellow;
     color: white;
     font-size: 1.1em;
     font-weight: lighter;
 }
 
 .typing-effect {
+    /* color: blue; */
     /* color: white;
     font-size: 1.2em; */
     /* text-align: center; */
