--- a/happy_halloween/src/index.css
+++ b/happy_halloween/src/index.css
@@ -9,6 +9,7 @@ body {
   /* margin: 0;
   padding: 0; */
   height: 100vh;
+  box-sizing: border-box;
   /* overflow: hidden; */
   background-color: black;
 }
