--- a/happy_halloween/src/components/MaleCards/MaleCards.css
+++ b/happy_halloween/src/components/MaleCards/MaleCards.css
@@ -1,84 +1,86 @@
 .cards {
-
-    padding: 8rem;
-
-    /* padding: .6rem; */
-    /* width: 70vw; 
-    height: 40ch; 
-   background-color: transparent; */
-  
+    /* background-color: black; */
+    border: .5rem solid tomato;
+    color: tomato;
+    margin: 2.6rem;
+    /* transform: rotateY(180deg); */
 
 
 
-   display: grid;
-   grid-template-columns: repeat(4, 1fr);
-   grid-gap: 3rem;
-   grid-auto-rows: minmax(10ch, 40ch);
-   /* grid-area: auto; */
-   
-
+    
 }
 
 
-
-
-
-
-
 .card-container {
-    background-color: #f5f5f5;
-    position: relative;
-    width: 100%; 
-    height: 100%; 
-    transition: transform 0.9s;
+    background-color: whitesmoke;
+    margin: 3rem;
+    /* backface-visibility: hidden; */
+    /* overflow: hidden; */
+    /* transition: transform 0.9s; */
+    /* transform-style: preserve-3d; */
+    border: 2rem solid tomato;
     transform-style: preserve-3d;
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: center; */
-
-    /* display: flex;
-    flex-wrap: wrap;
-    align-content: space-between; */
-
-
-
+    transition: all 0.8s ease;
+    margin: 1.6rem;
+    /* padding: 4rem; */
   
-
 }
 
 .card-container:hover {
     transform: rotateY(180deg);
+    cursor: pointer;
 }
 
-.front-of-card,
-.back-of-card {
-    position: absolute;
-    /* width: 100%; */
-    /* height: 100%; */
-    -webkit-backface-visibility: hidden; /* Safari */
+.front-of-card {
     backface-visibility: hidden;
     overflow: hidden;
+    /* top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; */
 }
 
 
 .image {
-    height: 16rem;
-    width: 16rem;
+    height: 20rem;
+    width: 20rem;
+    border: 1rem solid whitesmoke;
 }
 
-.profileInformation h3 {
-    
-    text-align: center;
-    font-size: .65rem;
-    letter-spacing: .02rem;
-    font-weight: lighter;
-    line-height: .35rem;
-    margin: .56rem;
+
+.profileNameBirth h3    {
     color: black;
+    letter-spacing: .04rem;
+    justify-content: center;
+    text-transform: uppercase;
+    align-content: center;align-items: center;
+    text-align: center;
+    display: flex;
+    margin: 0;
+    font-weight: 400;
+}
+
+
+.name,
+.dateOfBirthAndLocation,
+.dateOfDeathAndLocation,
+.nickname,
+.provenVictims,
+.possibleOrConfessedVictims   {
+    font-size: .7rem;
+}
+
+
+.dateOfBirthAndLocation {
+ 
 }
 
 .profileInformation {
-    margin-top: 90%;
+
+}
+
+.profileInformation {
+   
 }
 
 
@@ -90,19 +92,51 @@
 .provenVictims,
 .possibleOrConfessedVictims,
 .cardDescriptionContainer {
-    color: black;  
+    /* color: black;   */
 }
 
-.back-of-card {
-    background-color: #f5f5f5;
-    padding: 1rem;
-    /* margin: 1rem; */
-    color: white;
-    /* line-height: 2rem; */
+.back-of-card  {
+    backface-visibility: hidden;
+    overflow: hidden;
+    /* background-color: #f5f5f5; */
+    color: black;
+    /* text-align: center; */
     transform: rotateY(180deg);
+    position: absolute;
+    background-color: whitesmoke;
+    top: 0;
+    left: 0;
+    /* padding: 1rem;
+    font-size: 2rem; */
+    /* line-height: 20.5px; */
+    /* letter-spacing: 1.5px; */
+    /* z-index: -1; */
+    /* border: .1rem solid whitesmoke; */
+   
+  padding: .5rem;
 }
+
+
+
+.cardDescriptionContainer  {
+    /* text-align: center; */
+    /* color: white; */
+    /* margin-top: 0%; */
+    /* margin: .6rem; */
+}
+
 
 .card-description {
+    /* margin: .6rem; */
+    font-size: .7rem;
+    padding: 0.4rem 0.4rem;
+    /* text-align: center; */
+    line-height: 1rem;
+    font-weight: 400;
+    /* font-size: 2rem; */
+    /* background-color: whitesmoke; */
+    /* border: 2px solid red; */
     /* font-size: .98rem; */
-    font-size: .65rem;
+    /* font-size: .65rem; */
+    /* color: white; */
 }
