--- a/happy_halloween/src/components/Navbar/Navbar.css
+++ b/happy_halloween/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 body {
-    overflow: hidden;
-    height: 100vh;
-    width: 100vw;
+    /* overflow: hidden; */
+    /* height: 100vh; */
+    /* width: 100vw; */
 }
 
 
@@ -22,6 +22,7 @@ li {
     text-decoration: none;
     letter-spacing: 1.5px;
     font-size: 15.5px;
+    font-weight: 400;
     text-transform: uppercase;
     letter-spacing: .2rem;
     /* font-weight: lighter; */
