--- a/happy_halloween/src/pages/Motives/Motives.css
+++ b/happy_halloween/src/pages/Motives/Motives.css
@@ -31,7 +31,7 @@ body {
 }
 
 .motives-title{
-    font-weight: lighter;
+    font-weight: 400;
 }
 
 .mission-title,
@@ -41,7 +41,7 @@ body {
 .thrill-title,
 .comfort-title {
     letter-spacing: .2rem;
-    font-weight: lighter;
+    font-weight: 400;
     font-size: 1rem;
 }
 
